src/main/kotlin/com/example/iceeteaserver/global/error/exceptions/IceTeaException.kt
package com.example.iceeteaserver.global.error.exceptions

import com.example.iceeteaserver.global.error.ErrorCode

open class IceTeaException(val errorCode: ErrorCode): RuntimeException(errorCode.message)
